src/objects/RMAv2__c.object
<CustomObject>
    <description>RMA object version 2</description>
    <fields>
        <fullName>rma4HourDepotDistanceMiles__c</fullName>
        <label>4-Hour Depot Distance (Miles)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rmaAssetLocAreaOrGrid__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(rmaOverrideAssetLocAreaOrGrid__c)),
      rmaOverrideAssetLocAreaOrGrid__c,
      IF(ISBLANK(rmaDiskShelfAsset__c),
         rmaCaseNumber__r.Asset.assetLocAreaOrGrid__c,
         rmaDiskShelfAsset__r.assetLocAreaOrGrid__c)))</formula>
        <label>Asset Location - Area/Grid Name/Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaAssetLocBuilding__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(rmaOverrideAssetLocBuilding__c)),
      rmaOverrideAssetLocBuilding__c,
      IF(ISBLANK(rmaDiskShelfAsset__c),
         rmaCaseNumber__r.Asset.assetLocBuilding__c,
         rmaDiskShelfAsset__r.assetLocBuilding__c)))</formula>
        <label>Asset Location - Building Name/Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaAssetLocDatacenter__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(rmaOverrideAssetLocDatacenter__c)),
      rmaOverrideAssetLocDatacenter__c,
      IF(ISBLANK(rmaDiskShelfAsset__c),
         rmaCaseNumber__r.Asset.assetLocDatacenter__c,
         rmaDiskShelfAsset__r.assetLocDatacenter__c)))</formula>
        <label>Asset Location - Datacenter Name/Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaAssetLocFloor__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(rmaOverrideAssetLocFloor__c)),
      rmaOverrideAssetLocFloor__c,
      IF(ISBLANK(rmaDiskShelfAsset__c),
         rmaCaseNumber__r.Asset.assetLocFloor__c,
         rmaDiskShelfAsset__r.assetLocFloor__c)))</formula>
        <label>Asset Location - Floor Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaAssetLocPositionInRack__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(rmaOverrideAssetLocPositionInRack__c)),
      rmaOverrideAssetLocPositionInRack__c,
      IF(ISBLANK(rmaDiskShelfAsset__c),
         rmaCaseNumber__r.Asset.assetLocPositionInRack__c,
         rmaDiskShelfAsset__r.assetLocPositionInRack__c)))</formula>
        <label>Asset Location - Position In Rack</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaAssetLocRack__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(rmaOverrideAssetLocRack__c)),
      rmaOverrideAssetLocRack__c,
      IF(ISBLANK(rmaDiskShelfAsset__c),
         rmaCaseNumber__r.Asset.assetLocRack__c,
         rmaDiskShelfAsset__r.assetLocRack__c)))</formula>
        <label>Asset Location - Rack Name/Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaAssetLocRow__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(rmaOverrideAssetLocRow__c)),
      rmaOverrideAssetLocRow__c,
      IF(ISBLANK(rmaDiskShelfAsset__c),
         rmaCaseNumber__r.Asset.assetLocRow__c,
         rmaDiskShelfAsset__r.assetLocRow__c)))</formula>
        <label>Asset Location - Row Name/Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaAssetNrdIsInEffect__c</fullName>
        <description>Returns &quot;Yes&quot; if NRD is in effect.  Returns &quot;No&quot; otherwise.</description>
        <formula>IF(OR(ISPICKVAL(rmaComponent__c, &quot;HDD&quot;),
      ISPICKVAL(rmaComponent__c, &quot;SSD&quot;)),
   IF(ISBLANK(rmaOutgoingShipmentDateTimeOpened__c),
      IF(OR(AND(ISBLANK(rmaDiskShelfAsset__c),
                NOT(ISBLANK(rmaCaseNumber__r.Asset.assetNrdEndDate__c)),
                (TODAY() &lt;= rmaCaseNumber__r.Asset.assetNrdEndDate__c)),
            AND(NOT(ISBLANK(rmaDiskShelfAsset__c)),
                NOT(ISBLANK(rmaDiskShelfAsset__r.assetNrdEndDate__c)),
                (TODAY() &lt;= rmaDiskShelfAsset__r.assetNrdEndDate__c))),
         &quot;Yes&quot;,
         &quot;No&quot;),
      IF(OR(AND(ISBLANK(rmaDiskShelfAsset__c),
                NOT(ISBLANK(rmaCaseNumber__r.Asset.assetNrdEndDate__c)),
                (DATEVALUE(rmaOutgoingShipmentDateTimeOpened__c) &lt;= rmaCaseNumber__r.Asset.assetNrdEndDate__c)),
            AND(NOT(ISBLANK(rmaDiskShelfAsset__c)),
                NOT(ISBLANK(rmaDiskShelfAsset__r.assetNrdEndDate__c)),
                (DATEVALUE(rmaOutgoingShipmentDateTimeOpened__c) &lt;= rmaDiskShelfAsset__r.assetNrdEndDate__c))),
         &quot;Yes&quot;,
         &quot;No&quot;)),
   &quot;No&quot;)</formula>
        <label>Asset NRD Is In Effect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaAssetPartShipLastValDateIsStale__c</fullName>
        <formula>IF(ISBLANK(rmaDiskShelfAsset__c),
   IF(ISBLANK(rmaCaseNumber__r.Asset.assetPartShipLastValidatedDatetime__c),
      true,
      IF(TODAY() - DATEVALUE(rmaCaseNumber__r.Asset.assetPartShipLastValidatedDatetime__c) &lt;= 180,
         false,
         true
        )
     ),
   IF(ISBLANK(rmaDiskShelfAsset__r.assetPartShipLastValidatedDatetime__c),
      true,
      IF(TODAY() - DATEVALUE(rmaDiskShelfAsset__r.assetPartShipLastValidatedDatetime__c) &lt;= 180,
         false,
         true
        )
     )
  )</formula>
        <label>Asset Part Ship Last Val Date Is Stale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rmaAssetSameDayPartDeliveryPreference__c</fullName>
        <formula>IF(ISBLANK(rmaDiskShelfAsset__c),
   TEXT(rmaCaseNumber__r.Asset.assetSameDayPartDeliveryPreference__c),
   TEXT(rmaDiskShelfAsset__r.assetSameDayPartDeliveryPreference__c)
  )</formula>
        <label>Asset Same Day Part Delivery Preference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaAssetSerialNumber__c</fullName>
        <formula>IF(ISBLANK(rmaDiskShelfAsset__c),
   rmaCaseNumber__r.Asset.Name,
   rmaDiskShelfAsset__r.Name)</formula>
        <label>Asset Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaAssetSla__c</fullName>
        <formula>IF(ISBLANK(rmaDiskShelfAsset__c),
   CASE(rmaCaseNumber__r.Asset.SLA__c,
        &quot;Premium&quot;, &quot;NBD&quot;,
        &quot;Premium 4 Hour&quot;, &quot;4-Hour&quot;,
        &quot;Premium 4 Hour Onsite&quot;, &quot;4-Hour Onsite&quot;,
        &quot;TSC: Premium&quot;, &quot;NBD&quot;,
        &quot;TSC: Premium Onsite&quot;, &quot;NBD Onsite&quot;,
        &quot;TSC: Premium 4 Hour&quot;, &quot;4-Hour&quot;,
        &quot;TSC: Premium 4 Hour Onsite&quot;, &quot;4-Hour Onsite&quot;,
        &quot;NBD&quot;),
   CASE(rmaDiskShelfAsset__r.SLA__c,
        &quot;Premium&quot;, &quot;NBD&quot;,
        &quot;Premium 4 Hour&quot;, &quot;4-Hour&quot;,
        &quot;Premium 4 Hour Onsite&quot;, &quot;4-Hour Onsite&quot;,
        &quot;TSC: Premium&quot;, &quot;NBD&quot;,
        &quot;TSC: Premium Onsite&quot;, &quot;NBD Onsite&quot;,
        &quot;TSC: Premium 4 Hour&quot;, &quot;4-Hour&quot;,
        &quot;TSC: Premium 4 Hour Onsite&quot;, &quot;4-Hour Onsite&quot;,
        &quot;NBD&quot;))</formula>
        <label>Asset SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaCaseAccountId__c</fullName>
        <formula>rmaCaseNumber__r.AccountId</formula>
        <label>Case Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaCaseIsEngOrExecEscalated__c</fullName>
        <formula>OR(INCLUDES(rmaCaseNumber__r.caseEscalationType__c, &quot;Engineering Escalation&quot;),
   INCLUDES(rmaCaseNumber__r.caseEscalationType__c, &quot;Executive Escalation&quot;))</formula>
        <label>Case Is Eng Or Exec Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rmaCaseNimbleVersion__c</fullName>
        <formula>TEXT(rmaCaseNumber__r.Nimble_Version__c)</formula>
        <label>Nimble Version (from Case)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaCaseNumber__c</fullName>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>RMAv2s</relationshipLabel>
        <relationshipName>RMAv2s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rmaComponent__c</fullName>
        <label>Component</label>
        <picklist>
            <controllingField>rmaLabArray__c</controllingField>
            <picklistValues>
                <fullName>BEZEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CABLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK (complete chassis, but without disks)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHASSIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT (controller)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORD (power cord)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DONGLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPANDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HBA_CARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIC_CARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PWR (power supply)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAILS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPARES (spare parts kit)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUPERCAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYS (complete system)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaConfigurationDetails__c</fullName>
        <label>Configuration Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rmaCustomerFaRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer FA Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rmaDateTimeCanceled__c</fullName>
        <label>Date/Time Canceled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaDateTimeClosed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaDateTimeOpened__c</fullName>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaDeliveryInstructions__c</fullName>
        <label>Delivery Instructions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rmaDetailedReason__c</fullName>
        <label>Detailed Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rmaDiskShelfAsset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Disk Shelf Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>RMAv2s - Disk Shelf Asset</relationshipLabel>
        <relationshipName>RMAv2s_DiskShelfAsset</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rmaExcludeFromOpsMetrics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a field that Ops can check to exclude an RMA from their metrics reporting.  Only people with an Operations profile can modify this field!</description>
        <inlineHelpText>This is a field that Ops can check to exclude an RMA from their metrics reporting.  Only people with an Operations profile can modify this field!</inlineHelpText>
        <label>Exclude From Ops Metrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rmaFaLogicHistory__c</fullName>
        <label>FA Logic History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rmaFaRequired__c</fullName>
        <label>FA Required</label>
        <picklist>
            <picklistValues>
                <fullName>No FA Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering FA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations FA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaFulfilledPartNumber__c</fullName>
        <label>Fulfilled Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaGeneralFailureDetails__c</fullName>
        <label>General Failure Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaHddSsdSerialNumber__c</fullName>
        <label>HDD/SSD Serial Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaIsForAGModel__c</fullName>
        <formula>IF(AND(OR(BEGINS(TEXT(rmaModel__c), &quot;CHA_NODISK&quot;),
          BEGINS(TEXT(rmaModel__c), &quot;CONT-STD&quot;),
          BEGINS(TEXT(rmaModel__c), &quot;CONT-SPEC&quot;)),
       RIGHT(TEXT(rmaModel__c), 1) = &quot;G&quot;),
   &quot;Yes&quot;,
   &quot;No&quot;)</formula>
        <label>RMA Is For A G Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaLabArray__c</fullName>
        <label>Lab Array</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaManufacturer__c</fullName>
        <label>Manufacturer</label>
        <picklist>
            <controllingField>rmaComponent__c</controllingField>
            <picklistValues>
                <fullName>CHA_NODISK: Nimble Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HBA_CARD: Emulex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD: Seagate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD: Toshiba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD: Western Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIC_CARD: Emulex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIC_CARD: Intel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIC: Intel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIC: Silicom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVRAM: Curtiss-Wright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVRAM: Netlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPARES: Nimble Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSD: Intel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUPERCAP: Agiga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Micro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYS: Nimble Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaMissedSlaReason__c</fullName>
        <label>Missed SLA Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Order shipped late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order delivered late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver Stuck in traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weather Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory stock out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed connection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday Delays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distance more than 150 miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other NonControllable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaMissedSla__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missed SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rmaModel__c</fullName>
        <label>Model</label>
        <picklist>
            <controllingField>rmaNimbleOsVersion__c</controllingField>
            <picklistValues>
                <fullName>BEZEL: CS series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEZEL: ES series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CABLE: CS235/300/500/700 to ES1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CABLE: CS2xx/4xx (NOT CS235) to ES1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CABLE: ES1 to ES1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: CS210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: CS220/240/260 (non-G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: CS220G/240G/260G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: CS420/440/460 (non-G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: CS420G/440G/460G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: ES series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHASSIS: CS210TJ (Taiji only; head unit only - not for disk shelves)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHASSIS: CS235/300/500/700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHASSIS: CS2xx/4xx (NOT CS235)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHASSIS: ES1 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-SPEC: CS210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-SPEC: CS220/240/260 (non-G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-SPEC: CS220G/240G/260G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-SPEC: CS420/440/460 (non-G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-SPEC: CS420G/440G/460G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS215, 2G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS215, 2P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS215, 2T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS215, 4G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS220/240/260 (non-G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS220G/240G/260G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS235</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS420/440/460 (non-G)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaNimbleOsVersion__c</fullName>
        <label>Nimble OS Version</label>
        <picklist>
            <controllingField>rmaComponent__c</controllingField>
            <picklistValues>
                <fullName>BEZEL: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CABLE: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHASSIS: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-SPEC: All other versions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: 1.4.x.x and above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORD: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DONGLE: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPANDER: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HBA_CARD: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIC_CARD: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIC: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVRAM: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PWR: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAILS: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAM: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPARES: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSD: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUPERCAP: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYS: N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USB: N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteArrivalCity__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(rmaOverrideOnsiteArrivalCity__c)),
      rmaOverrideOnsiteArrivalCity__c,
      IF(ISBLANK(rmaDiskShelfAsset__c),
         rmaCaseNumber__r.Asset.assetOnsiteArrivalCity__c,
         rmaDiskShelfAsset__r.assetOnsiteArrivalCity__c)))</formula>
        <label>Onsite Arrival City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteArrivalCountry__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(TEXT(rmaOverrideOnsiteArrivalCountry__c))),
      TEXT(rmaOverrideOnsiteArrivalCountry__c),
      IF(ISBLANK(rmaDiskShelfAsset__c),
         TEXT(rmaCaseNumber__r.Asset.assetOnsiteArrivalCountry__c),
         TEXT(rmaDiskShelfAsset__r.assetOnsiteArrivalCountry__c))))</formula>
        <label>Onsite Arrival Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteArrivalPostalCode__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(rmaOverrideOnsiteArrivalPostalCode__c)),
      rmaOverrideOnsiteArrivalPostalCode__c,
      IF(ISBLANK(rmaDiskShelfAsset__c),
         rmaCaseNumber__r.Asset.assetOnsiteArrivalPostalCode__c,
         rmaDiskShelfAsset__r.assetOnsiteArrivalPostalCode__c)))</formula>
        <label>Onsite Arrival Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteArrivalState__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(rmaOverrideOnsiteArrivalState__c)),
      rmaOverrideOnsiteArrivalState__c,
      IF(ISBLANK(rmaDiskShelfAsset__c),
         rmaCaseNumber__r.Asset.assetOnsiteArrivalState__c,
         rmaDiskShelfAsset__r.assetOnsiteArrivalState__c)))</formula>
        <label>Onsite Arrival State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteArrivalStreet1__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(rmaOverrideOnsiteArrivalStreet1__c)),
      rmaOverrideOnsiteArrivalStreet1__c,
      IF(ISBLANK(rmaDiskShelfAsset__c),
         rmaCaseNumber__r.Asset.assetOnsiteArrivalStreet1__c,
         rmaDiskShelfAsset__r.assetOnsiteArrivalStreet1__c)))</formula>
        <label>Onsite Arrival Street1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteArrivalStreet2__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(rmaOverrideOnsiteArrivalStreet2__c)),
      rmaOverrideOnsiteArrivalStreet2__c,
      IF(ISBLANK(rmaDiskShelfAsset__c),
         rmaCaseNumber__r.Asset.assetOnsiteArrivalStreet2__c,
         rmaDiskShelfAsset__r.assetOnsiteArrivalStreet2__c)))</formula>
        <label>Onsite Arrival Street2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteCheckInCode__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(TEXT(rmaOverrideOnsiteCheckInCode__c))),
      TEXT(rmaOverrideOnsiteCheckInCode__c),
      IF(ISBLANK(rmaDiskShelfAsset__c),
         TEXT(rmaCaseNumber__r.Asset.assetOnsiteCheckInCode__c),
         TEXT(rmaDiskShelfAsset__r.assetOnsiteCheckInCode__c))))</formula>
        <label>Onsite Check-In Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteCheckInNotes__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(rmaOverrideOnsiteCheckInNotes__c)),
      rmaOverrideOnsiteCheckInNotes__c,
      IF(ISBLANK(rmaDiskShelfAsset__c),
         rmaCaseNumber__r.Asset.assetOnsiteCheckInNotes__c,
         rmaDiskShelfAsset__r.assetOnsiteCheckInNotes__c)))</formula>
        <label>Onsite Check-In Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteCompiledNotes__c</fullName>
        <label>Onsite Compiled Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteControllerExpanderSlot__c</fullName>
        <label>Onsite Controller/Expander Slot</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteHddSsdSlot__c</fullName>
        <label>Onsite HDD/SSD Slot</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteNicCardSlot__c</fullName>
        <label>Onsite NIC Card Slot</label>
        <picklist>
            <picklistValues>
                <fullName>Controller A, Slot 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller A, Slot 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller A, Slot 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller B, Slot 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller B, Slot 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller B, Slot 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOnsitePartDispositionCode__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(TEXT(rmaOverrideOnsitePartDispositionCode__c))),
      TEXT(rmaOverrideOnsitePartDispositionCode__c),
      IF(ISBLANK(rmaDiskShelfAsset__c),
         TEXT(rmaCaseNumber__r.Asset.assetOnsitePartDispositionCode__c),
         TEXT(rmaDiskShelfAsset__r.assetOnsitePartDispositionCode__c))))</formula>
        <label>Onsite Part Disposition Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOnsitePartDispositionNotes__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(rmaOverrideOnsitePartDispositionNotes__c)),
      rmaOverrideOnsitePartDispositionNotes__c,
      IF(ISBLANK(rmaDiskShelfAsset__c),
         rmaCaseNumber__r.Asset.assetOnsitePartDispositionNotes__c,
         rmaDiskShelfAsset__r.assetOnsitePartDispositionNotes__c)))</formula>
        <label>Onsite Part Disposition Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOnsitePartHandoverCode__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(TEXT(rmaOverrideOnsitePartHandoverCode__c))),
      TEXT(rmaOverrideOnsitePartHandoverCode__c),
      IF(ISBLANK(rmaDiskShelfAsset__c),
         TEXT(rmaCaseNumber__r.Asset.assetOnsitePartHandoverCode__c),
         TEXT(rmaDiskShelfAsset__r.assetOnsitePartHandoverCode__c))))</formula>
        <label>Onsite Part Handover Code</label>
        <type>Text</type>
    </fields>
</CustomObject>